--- a/net-install.yaml
+++ b/net-install.yaml
@@ -1,7 +1,3 @@
-# Example configuration with groups and packages, taken from Chakra Linux.
-#
-# This example is rather limited. See `README.md` for full documentation
-# on the configuration format.
 - name: "Default"
   description: "Default group"
   hidden: true
@@ -61,7 +57,7 @@
     - unrar
     - unzip
     - zip
-    - lightdm-gtk-greeter-settings
+    - network-manager-applet    
     
 
 - name: "Xorg"
@@ -99,6 +95,7 @@
     - xf86-input-evdev
     - xf86-input-keyboard
     - xf86-input-mouse
+
 - name: " Video  Drivers"
   description: "Video Drivers Groups"
   hidden: false
@@ -132,13 +129,11 @@
     - xf86-video-trident
     - xf86-video-tseng
     - xf86-video-v4l
-    - xf86-video-vesa
-    - xf86-video-vmware
     - xf86-video-voodoo
     - mesa-libgl
-    - open-vm-tools
+  
 
-- name: "xfce Desktop"
+- name: "Xfce Desktop"
   description: "Xfce groups"
   hidden: false
   selected: false
@@ -146,16 +141,6 @@
   packages:
     - xfce4
     - xfce4-goodies
-
-- name: "mate Desktop"
-  description: "Mate groups"
-  hidden: false
-  selected: false
-  packages:
-    - mate
-    - mate-extra
-    - filemanager-actions
-    - accountsservice
 
 - name: "gnome Desktop"
   description: "Gnome groups"
@@ -176,4 +161,103 @@
     - kde-applications
 
 
+- name: "Mate Desktop"
+  description: "Mate groups"
+  hidden: false
+  selected: false
+  packages:
+    - mate
+    - mate-extra
+    - filemanager-actions
+    - accountsservice
  
+- name : "Cinnamon Desktop"
+  description : "Cinnamon Desktop"
+  hidden : false 
+  selected : false
+  packages : 
+    - cinnamon
+    - cinnamon-translations
+    - gnome-terminal
+
+- name : "Lxqt Desktop"
+  description : "Lxqt Groups"
+  hidden : false
+  selected : false
+  packages: 
+    - lxqt
+    - oxygen-icons
+    - kvantum-qt5
+
+- name : "Budgie Desktop"
+  description : "Budgie groups"
+  hidden : false
+  selected : false
+  packages : 
+    - budgie-desktop
+    - budgie-extras
+    - gnome
+    - gnome-terminal
+
+- name : "Deepin Desktop"
+  description : "Deepin Groups"
+  hidden : false
+  selected : false
+  packages : 
+    - deepin
+    - deepin-extra
+
+- name : "Display Managers"
+  description : "Display Managers Groups"
+  hidden : false
+  selected : false
+  packages  : 
+    - lightdm-gtk-greeter-settings
+    - lxdm-gtk3
+    - lxdm
+    - gdm 
+    - sddm
+
+- name : "Web Browsers"
+  description : "Some Web Browsers does not get your locales config"
+  hidden : false
+  selected : false
+  packages : 
+    - opera
+    - firefox
+    - chromium
+    - midori
+
+- name : "Developpemnt Utils"
+  description :  "Developpemnt Groups"
+  hidden : false 
+  selected : false
+  packages : 
+    - git
+    - code
+    - atom
+    - geany
+    - meld
+
+- name : "Terminals"
+  description : "Terminals Groups"
+  hidden : false
+  selected : false
+  packages : 
+    - alacritty 
+    - tilda
+    - xfce4-terminal
+    - gnome-terminal
+    - termite
+    - xterm
+    - rxvt-unicode
+
+- name : "Eye Candys"
+  description : "Eye Candys Groups"
+  hidden : false
+  selected : false
+  packages : 
+    - arc-gtk-theme
+    - arc-icon-theme
+    - adapta-gtk-theme
+    - papirus-icon-theme
